test/many-resolve-errors.err.expect
test/many-resolve-errors.ktn:1:1: compile error: unable to resolve word 'some_undefined_name'
test/many-resolve-errors.ktn:3:16: compile error: unable to resolve word 'some_undefined_name'
test/many-resolve-errors.ktn:4:16: compile error: unable to resolve word 'some_other_undefined_name'
test/many-resolve-errors.ktn:6:7: compile error: unable to resolve word 'y'
test/many-resolve-errors.ktn:6:9: compile error: unable to resolve word 'y'
test/many-resolve-errors.ktn:6:11: compile error: unable to resolve word 'z'
test/many-resolve-errors.ktn:7:7: compile error: unable to resolve word 'z'
test/many-resolve-errors.ktn:7:9: compile error: unable to resolve word 'z'
test/many-resolve-errors.ktn:10:2: compile error: unable to resolve word 'vec1'
test/many-resolve-errors.ktn:10:8: compile error: unable to resolve word 'vec2'
test/many-resolve-errors.ktn:10:18: compile error: unable to resolve word 'vec3'
test/many-resolve-errors.ktn:12:4: compile error: unable to resolve word 'bad'
